--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -75,7 +75,7 @@
         <!-- List of Papers -->
         {{- with .publications }}
                 <div class="publications-list">
-                    <h2>Papers (peer-reviwed)</h2>
+                    <h2>Papers (peer-reviewed)</h2>
                     <ul>
                         {{- range . }}
                             <li>
