--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -79,7 +79,7 @@
                     <ul>
                         {{- range . }}
                             <li>
-                                <b>[{{ .venue }}]</b> <a href="{{ .url }}"><b>{{ .title }}</b></a> <em>{{ .publisher }}</em> - {{ .date }}<br>
+                                <b>[{{ .venue }}]</b> <a href="{{ .url }}">{{ .title }}</a> <em>{{ .publisher }}</em> - {{ .date }}<br>
                                 {{ .authors }}<br>
                                 {{ .description }}
                             </li>
