--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -95,7 +95,7 @@
                     <ul>
                         {{- range . }}
                             <li>
-                                <a href="{{ .url }}">{{ .title }}</a> - {{ .date }}<br>
+                                <a href="{{ .url }}"><em>{{ .title }}</em></a> - {{ .date }}<br>
                                 {{ .authors }}<br>
                                 {{ .description }}
                             </li>
