--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -112,6 +112,7 @@
                         {{- range . }}
                             <li>
                                 <a href="{{ .url }}"><strong>{{ .title }}</strong></a><br>
+                                {{ .img }}<br>
                                 {{ .description }}
                             </li>
                         {{- end }}
