--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -111,7 +111,8 @@
                     <ul>
                         {{- range . }}
                             <li>
-                                <a href="{{ .url }}"><strong>{{ .title }}</strong></a><br>
+                                <a href="{{ .url }}"><strong>{{ .title }}</strong></a>
+                                &nbsp
                                 {{- with .badges }}
                                     {{- range . }}
                                         <img src="{{ .url }}">
