--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -165,7 +165,7 @@
                     <ul>
                         {{- range . }}
                             <li>
-                                <strong>[{{ .result }}]</strong>, <u>{{ .title }}</u> - {{ .date }}<br>
+                                <strong>{{ .result }}</strong>, <u>{{ .title }}</u> - {{ .date }}<br>
                                 {{ .description }}
                             </li>
                         {{- end }}
