--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -123,7 +123,7 @@
                                 {{- with .subprojects }}
                                     {{- range . }}
                                         <li>
-                                            <a href="{{ .url }}">- <strong>{{ .title }}</strong></a> {{ .description }}
+                                            <a href="{{ .surl }}">- <strong>{{ .stitle }}</strong></a> {{ .sdescription }}
                                         </li>
                                     {{- end }}
                                 {{- end }}
