--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -122,9 +122,7 @@
                                 {{ .description }}
                                 {{- with .subprojects }}
                                     {{- range . }}
-                                        <li>
-                                            <a href="{{ .surl }}">- <strong>{{ .stitle }}</strong></a> {{ .sdescription }}
-                                        </li>
+                                        <a href="{{ .surl }}"> <strong> - {{ .stitle }}</strong></a> {{ .sdescription }}
                                     {{- end }}
                                 {{- end }}
                             </li>
