--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -122,7 +122,7 @@
                                 {{ .description }}
                                 {{- with .subprojects }}
                                         {{- range . }}
-                                            <li> <a href="{{ .url }}"> - <em>{{ .title }}</em>: </a> {{ .description }} </li>
+                                            <a href="{{ .url }}"> - <em>{{ .title }}</em>: </a> {{ .description }}
                                         {{- end }}
                                 {{- end }}
                             </li>
