--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -121,8 +121,9 @@
                                 {{- end }}
                                 {{ .description }}
                                 {{- with .subprojects }}
+                                        <br/>
                                         {{- range . }}
-                                            <a href="{{ .url }}"> - <em>{{ .title }}</em>: </a> {{ .description }} <br/>
+                                            <a href="{{ .url }}"> - <em>{{ .title }}</em>: </a> {{ .description }}
                                         {{- end }}
                                 {{- end }}
                             </li>
