--- a/themes/PaperMod/layouts/partials/index_profile.html
+++ b/themes/PaperMod/layouts/partials/index_profile.html
@@ -185,7 +185,7 @@
                     <ul>
                         {{- range . }}
                             <li>
-                                <strong>{{ .title }}</strong><br>
+                                <strong>{{ .title }}</strong>
                                 {{ .description }}
                                 {{- with .subprojects }}
                                         {{- range . }}
